# anki-card-converter

./: Makefile  README.md  noxfile.py  pyproject.toml
.github/workflows/: tests.yml
src/anki_card_converter/: cards.py  convert.py
tests/: test_cards.py
